--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <section class="home" id="home">Home</section>
+    <section class="about" id="about">About</section>
+    <section class="timeline" id="timeline">Timeline</section>
+    <section class="skills" id="skills">Skills</section>
+    <section class="project" id="project">Project</section>
+    <section class="contact" id="contact">Contact</section>
+    <section class="footer" id="footer">Footer</section>
     <!-- Javascript -->
     <script src="js/script.js"></script>
   </body>
