--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,28 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="home" id="home">Home</section>
-    <section class="about" id="about">About</section>
-    <section class="timeline" id="timeline">Timeline</section>
+    <section class="home" id="home">
+      Home
+      <img src="img/bd/home-gray.svg" alt="Fundo" class="image" />
+    </section>
+    <section class="about" id="about">
+      About
+      <img src="img/bd/about-black.svg" alt="Fundo" class="top" />
+      <img src="img/bd/about-white.svg" alt="Fundo" class="bottom" />
+    </section>
+    <section class="timeline" id="timeline">
+      Timeline
+      <img src="img/bd/timeline-gray.svg" alt="Fundo" class="time-top" />
+    </section>
     <section class="skills" id="skills">Skills</section>
-    <section class="project" id="project">Project</section>
-    <section class="contact" id="contact">Contact</section>
+    <section class="project" id="project">
+      Project
+      <img src="img/bd/project-white.svg" alt="Fundo" class="bottom" />
+    </section>
+    <section class="contact" id="contact">
+      Contact
+      <img src="img/bd/contact-gray.svg" alt="Fundo" class="top" />
+    </section>
     <section class="footer" id="footer">Footer</section>
     <!-- Javascript -->
     <script src="js/script.js"></script>
