Created the basic home structure
Criado a estrutura básica da página home

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,22 @@
   </head>
   <body>
     <section class="home" id="home">
-      Home
+      <header>
+        <h1>header</h1>
+        <h1>end</h1>
+      </header>
+      <div class="container center">
+        <div class="content">
+          <div class="content-left center">
+            <div class="social center">1</div>
+            <div class="text">2</div>
+          </div>
+          <div class="content-right center">right</div>
+        </div>
+      </div>
       <img src="img/bd/home-gray.svg" alt="Fundo" class="image" />
     </section>
     <section class="about" id="about">
-      About
       <img src="img/bd/about-black.svg" alt="Fundo" class="top" />
       <img src="img/bd/about-white.svg" alt="Fundo" class="bottom" />
     </section>
