Social button inclusion
Criado os botões de acesso as redes sociais.

--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,26 @@
         <h1>header</h1>
         <h1>end</h1>
       </header>
-      <div class="container center">
+      <main>
+        <div class="main__container center">
         <div class="content">
           <div class="content-left center">
-            <div class="social center">1</div>
+            <div class="social center">
+              <div class="btn-social">
+                  <ul>
+                    <li><a href="#"><img src="img/social/facebook.svg" alt="Facebook"></a></li>
+                    <li><a href="#"><img src="img/social/instagram.svg" alt="Instagram"></a></li>
+                    <li><a href="#"><img src="img/social/linkedin.svg" alt="LinkedIn"></i> </a></li>
+                    <li><a href="#"><img src="img/social/Github.svg" alt="Github"></a></li>
+                  </ul>
+              </div>
+            </div>
             <div class="text">2</div>
           </div>
           <div class="content-right center">right</div>
         </div>
       </div>
+      </main>
       <img src="img/bd/home-gray.svg" alt="Fundo" class="image" />
     </section>
     <section class="about" id="about">
