I believe in the configuration of the dark/light button
Certo na configuração do button dark e link

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,27 @@
   <body>
     <section class="home" id="home">
       <header>
-        <h1>header</h1>
-        <h1>end</h1>
+        <nav id="nav">
+          <div class="logo">
+            <a href="#home"><img src="img/logo.svg" alt="Logo" /></a>
+          </div>
+          <ul id="menu" role="menu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">Sobre mim</a></li>
+            <li><a href="#skill">Conhecimentos</a></li>
+            <li><a href="#timeline">Timeline</a></li>
+            <li><a href="#project">Projetos</a></li>
+            <li><a href="#contact">Contatos</a></li>
+          </ul>
+          <div id="btn__dark-light">
+            <img src="img/sun.svg" alt="Sol" class="sun">
+            <div class="indicator"></div>
+            <img src="img/moon.png" alt="lua" class="moon">
+          </div>
+          
+             <!-- <span id="hamburger"></span>  -->
+          
+        </nav>
       </header>
       <main>
         <div class="main__container center">
