Header scroll fixed

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <title>Project Personal Page - Portfolio</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css" />
+  <!-- Lista de afazeres -->
+  <!-- TODO - fazer a trocas das cores das imagens dos bd para funcionar o button dark/light
+  BUG - alterar os nomes do programa  -->
   </head>
   <body>
     <section class="home" id="home">
@@ -33,7 +36,7 @@
         </nav>
       </header>
       <main>
-        <div class="main__container center">
+        <div class="container center">
         <div class="content">
           <div class="content-left center">
             <div class="social center">
